# file-ingest-service

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
config/: app.toml
data/processed/: sample.txt
scripts/: 00_install_uv_machine_wide.ps1  01_create_service_account.ps1  02_set_machine_env.ps1  03_register_task.ps1  04_smoke_test.ps1  05_deploy.ps1  06_control.ps1  rename_template.sh
src/file_ingest_service/: cli.py  config.py  ingest.py  local_files.py  logging.py  paths.py  protocols.py  service.py  settings.py
tests/: conftest.py  test_cli.py  test_config.py  test_ingest.py  test_local_files.py  test_logging.py  test_paths.py  test_pipeline.py  test_service.py  test_settings.py
