[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "file-ingest-service"
version = "0.1.0"
description = "A directory watcher ingestion service that detects new files, validates them, moves them through an inbox/processed/error steps, and logs each step."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

# Dependencies (extras) for end-users (runtime features); pip install package[extra]
[project.optional-dependencies]
yaml = [
  "pyyaml>=6.0.1",
]

# Dependencies for workflow tooling during development (uv, testing, linting, etc.)
[dependency-groups]
dev = [
    "nox>=2026.2.9",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]

[project.scripts]
fis = "file_ingest_service.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/file_ingest_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
